syntax = "proto3";
package bze.v1.rewards;

option go_package = "github.com/bze-alphateam/bze/x/rewards/types";

message TradingReward {
  string reward_id = 1;
  string prize_amount = 2;
  string prize_denom = 3;
  uint32 duration = 4;
  string market_id = 5;
  uint32 slots = 6;
}

